<resources>
    <string name="app_name">FREESHOP</string>

    <string name="api_version">5.53</string>
    <integer name="com_vk_sdk_AppId">5591803</integer>

    <string name="free_exchange">FREESHOP</string>
    <string name="exchanges">Обмены</string>

    <string name="app_description">Обменяй свои услуги и ненужные вещи на то, что тебе нужно.\nМеняемся и дарим.</string>

    <string name="login">Войти</string>

    <string name="login_successfully">Вход выполнен</string>
    <string name="sign_up_successfully">Пользователь зарегистрирован</string>

    <string name="login_error">Ошибка входа</string>
    <string name="sign_up_error">Ошибка регистрации</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="give">Даю:</string>
    <string name="get">Получаю:</string>
    <string name="category">Категория:</string>
    <string name="place">Место\nвстречи:</string>
    <string name="contacts">Способ\nсвязи:</string>
    <string name="notification">Уведомления:</string>

    <string name="date_sample">18.08.2016 12:14</string>
    <string name="sample">Пример</string>
    <string name="sample_text">apple ibook g4, чистый американец, весь пакет документов и дисков!+apple камера, все без ремонтов и вскрытий!!!один хозяин, привезен из штатов!в идеальном состоянии!</string>

    <string name="search">Поиск</string>
    <string name="add">Добавить обмен</string>
    <string name="messages">Мои сообщения</string>
    <string name="subscribes">Подписки</string>
    <string name="dialog">Диалог</string>

    <string name="open_drawer">Открытое меню</string>
    <string name="close_drawer">Закрытое меню</string>

    <string name="close">Закрыть</string>

    <string name="no_category">Без категории</string>

    <string name="try_again_message">К сожалению ничего не найдено\nПопробуйте еще раз</string>

    <string name="add_photo">Фотографии</string>
    <string name="add_primary">Основное</string>
    <string name="add_give">Даю</string>
    <string name="add_get">Получаю</string>
    <string name="add_category">Категория</string>
    <string name="add_place">Место встречи</string>
    <string name="add_contacts">Способ связи</string>
    <string name="add_comments">Описание</string>

    <string name="pm">ЛС</string>
    <string name="phone">Телефон</string>
    <string name="other">Другое</string>

    <string name="send">Отправить</string>
    <string name="delete">Удалить</string>

    <string name="no_camera_on_device">Нет камеры в устройстве</string>
    <string name="get_group_error">Группа вконтакте не определена</string>
    <string name="get_template_error">Шаблон сообщения не определен</string>
    <string name="get_personal_data_error">Пользователь не определен</string>
    <string name="parse_personal_data_error">Данные пользователя не правильные</string>

    <string name="successfully_completed">Обмен отправлен на модерацию на сайте</string>
    <string name="post_error">При попытке предложить объявление на сайт произошла ошибка</string>

    <string name="vk_post_success">Обмен отправлен на модерацию в паблик</string>
    <string name="vk_post_error">При попытке предложить объявление в группу Вконтакте произошла ошибка</string>

    <string name="fields_missed">Поля \"Даю\", \"Получаю\" должны быть заполнены</string>

    <string name="sending">Отправка..</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>

    <!-- MESAGES -->

    <string name="your_message">Ваше сообщение</string>
    <string name="your_comment">Ваш комментарий</string>

    <!-- SUBSCRIBES LISTS -->

    <string name="subs_new_sub">Новая подписка</string>
    <string name="subs_edit_sub">Изменение подписки</string>
    <string name="subs_title">Подписка</string>

    <string name="subs_main">Атрибуты подписки</string>
    <string name="subs_settings">Настройки</string>
    <string name="subs_notification">Уведомления</string>

    <string name="subs_create">Создать подписку</string>
    <string name="subs_update">Сохранить изменения</string>

    <string name="subs_create_error">Ошибка создания подписки</string>
    <string name="subs_create_success">Подписка успешно создана</string>

    <string name="subs_edit_error">Ошибка изменения подписки</string>
    <string name="subs_edit_success">Подписка успешно изменена</string>

    <string name="subs_mi_delete">Удалить</string>
    <string name="subs_mi_edit">Изменить</string>

    <string name="subs_exchanges">Обмены подписки</string>

    <string name="new_exchange">Новый обмен</string>

    <!-- INTERNET -->
    <string name="conn_error">Ошибка соединения</string>
    <string name="conn_check">Проверте соединение с интернетом</string>

    <!-- COMMENTS -->
    <string name="comments">Комментарии</string>
    <string name="detailed">Подробно</string>

    <!-- VIEW PAGER CATEGORIES -->
    <string name="all">Всё</string>
    <string name="without_category">Без категории</string>
    <string name="closes">Одежда</string>
    <string name="shoes">Обувь</string>
    <string name="for_children">Детское</string>
    <string name="all_for_beauty">Всё для красоты</string>
    <string name="technique">Техника</string>
    <string name="all_for_home">Всё для дома</string>
    <string name="books">Книги</string>
    <string name="auto_and_moto">Авто / Мото</string>
    <string name="others">Сборная солянка</string>
    <string name="services">Услуги</string>

    <integer name="all">-1</integer>
    <integer name="without_category">0</integer>
    <integer name="closes">1</integer>
    <integer name="shoes">2</integer>
    <integer name="for_children">3</integer>
    <integer name="all_for_beauty">4</integer>
    <integer name="technique">5</integer>
    <integer name="all_for_home">6</integer>
    <integer name="books">7</integer>
    <integer name="auto_and_moto">8</integer>
    <integer name="others">9</integer>
    <integer name="services">10</integer>

    <!-- NEW CATEGORIES -->

    
    <!-- ЭМПАТИЯ -->
    
    <string name="emp1_slogan">Никаких денег</string>
    <string name="emp1_text">Привет! Мы FREESHOP и мы не являемся торговой площадкой торгующей за деньги</string>
    <string name="emp1_button">Приступить</string>

    <string name="emp2_slogan">ИЩУ</string>
    <string name="emp2_text">Размещайте Ваши объявления о поиске нужных вещей, продуктов или услуг</string>
    <string name="emp2_button">Исследовать</string>

    <string name="emp3_slogan">ДАЮ</string>
    <string name="emp3_text">Продавайте, а точнее меняйте вещи на нужные Вам вещи или услуги</string>
    <string name="emp3_button">Начать</string>

    <string name="emp4_slogan">Обмен</string>
    <string name="emp4_text">Лайкайте товары и ищите по тегам интересущие Вас обмены</string>
    <string name="emp4_button">Попробовать</string>

    <!-- BACK PRESS -->

    <string name="press_back_twice_for_exit">Чтобы выйти из приложения нажмите \"назад\" еще раз</string>

    <!-- CITY -->

    <string name="default_city">Ростов-на-Дону</string>
    <integer name="default_city">15</integer>

    <string name="cancel">Отмена</string>
    <string name="choose">Выбрать</string>
    <string name="choose_city">Выбор города</string>


</resources>
