<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/choose_city"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:textSize="16sp"
        android:textColor="@color/colorDarkGray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorMediumGray" />

    <ListView
        android:id="@+id/lvCities"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorMediumGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acbCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acbOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose"
            android:theme="@style/CustomPrimaryImageButtonTheme"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>