<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/colorEmpathy1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="30dp"
            android:src="@drawable/empathy_icon1"/>

        <TextView
            android:id="@+id/tvBigText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"
            android:text="@string/emp1_slogan"
            android:shadowColor="@color/shadow"
            android:shadowDy="2"/>

        <TextView
            android:id="@+id/tvText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:shadowColor="@color/shadow"
            android:shadowDy="2"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:text="@string/emp1_text"/>

        <Button
            android:id="@+id/bButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/empathy_button"
            android:text="@string/emp1_button"/>

    </LinearLayout>

</RelativeLayout>