<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/no_photo"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="7dp"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                app:riv_border_width="2dp"
                app:riv_border_color="@color/shadowColor"/>

            <!---->

            <ImageView
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/give"
                        style="@style/SearchPullCategoriesText"
                        />
                    <TextView
                        android:id="@+id/gives"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample"
                        android:layout_marginLeft="3dp"
                        android:maxLines="2"
                        style="@style/SearchPullText"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get"
                        style="@style/SearchPullCategoriesText"
                        />
                    <TextView
                        android:id="@+id/gets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/sample"
                        android:maxLines="2"
                        style="@style/SearchPullText"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        style="@style/SearchPullCategoriesText"
                        />
                    <TextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:maxLines="1"
                        android:text="@string/sample"
                        style="@style/SearchPullText"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/sample_text"
                    android:maxLines="3"
                    style="@style/SearchPullText"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="3dp"
                    android:text="@string/date_sample"
                    style="@style/SearchPullDataText"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>