<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exchange_background"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:shrinkColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/give"
                            style="@style/SearchPullCategoriesText"
                            />

                        <TextView
                            android:id="@+id/gives"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample"
                            android:layout_marginLeft="10dp"

                            style="@style/SearchPullText"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get"
                            style="@style/SearchPullCategoriesText"
                            />
                        <TextView
                            android:id="@+id/gets"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/sample"

                            style="@style/SearchPullText"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notification"
                            style="@style/SearchPullCategoriesText"
                            />
                        <TextView
                            android:id="@+id/tvNotification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/sample"

                            style="@style/SearchPullText"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/category"
                            style="@style/SearchPullCategoriesText"
                            />
                        <TextView
                            android:id="@+id/tvCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/sample"

                            style="@style/SearchPullText"/>
                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ivMore"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:src="@drawable/settings_light"
                android:layout_marginRight="5dp"
                android:theme="@style/CustomTransparentImageButtonTheme"
                android:focusableInTouchMode="false"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>