<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/exchange_background"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subs_main"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etGives"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_give"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:inputType="text"
                            android:maxLines="1" />

                        <ImageButton
                            android:id="@+id/bAddGiveTag"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/plus_dark"
                            android:theme="@style/CustomTransparentImageButtonTheme"
                            android:visibility="gone"/>

                    </LinearLayout>

                    <com.technologies.mobile.free_exchange.views.WrappingRelativeLayout
                        android:id="@+id/wrlGivesTags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.technologies.mobile.free_exchange.views.WrappingRelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etGets"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_get"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:inputType="text"
                            android:maxLines="1" />

                        <ImageButton
                            android:id="@+id/bAddGetTag"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/plus_dark"
                            android:theme="@style/CustomTransparentImageButtonTheme"
                            android:visibility="gone"/>

                    </LinearLayout>

                    <com.technologies.mobile.free_exchange.views.WrappingRelativeLayout
                        android:id="@+id/wrlGetsTags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </com.technologies.mobile.free_exchange.views.WrappingRelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/exchange_background"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subs_settings"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/cbNotification"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:hint="@string/subs_notification"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:inputType="text"
                            android:maxLines="1" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bApply"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/subs_create"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>