<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.technologies.mobile.free_exchange.activities.ExchangeLookupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/no_photo_big"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:text="@string/sample"
                    android:padding="3dp"
                    style="@style/halfTransparentCardViewText"
                    android:background="@color/halfTransparentGreenCardView"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/halfTransparentGreenCardView">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TableRow>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/give"
                                style="@style/halfTransparentCardViewText"/>
                            <TextView
                                android:id="@+id/gives"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sample"
                                android:layout_marginLeft="5dp"
                                style="@style/halfTransparentCardViewText"/>
                        </TableRow>

                        <TableRow>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/get"
                                style="@style/halfTransparentCardViewText"/>
                            <TextView
                                android:id="@+id/gets"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sample"
                                android:layout_marginLeft="5dp"
                                style="@style/halfTransparentCardViewText"/>
                        </TableRow>

                    </TableLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardElevation="4dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                    </TableRow>

                </TableLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
